--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "place",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node build/index.js",
+    "start": "node index.js",
     "prettier": "prettier --write \"**/*.{js,ts}\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.77.0",
     "cors": "^2.8.5",
@@ -22,13 +20,6 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.5",
-    "@types/node": "^24.9.2",
-    "@types/redis": "^4.0.10",
-    "@types/socket.io": "^3.0.1",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "prettier": "^3.6.2"
   }
 }
