further typescript conversion;

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.77.0",
     "cors": "^2.8.5",
